# servergrimoiredjango

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  makefile  manage.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml
servergrimoire/: __init__.py  admin.py  apps.py  errors.py  testsettings.py
servergrimoire/models/: __init__.py  applications.py  generic.py  mixin.py  network.py
servergrimoire/task/: __init__.py  task_dns_check.py  task_gitlab.py  task_ssl_date_check.py
servergrimoire/tests/: settings.py  urls.py
servergrimoire/tests/model/: __init__.py  test_domain.py
servergrimoiredjango/: __init__.py  admin.py  apps.py  errors.py  filters.py  testsettings.py  urls.py  views.py
servergrimoiredjango/models/: __init__.py  applications.py  generic.py  mixin.py  network.py
servergrimoiredjango/task/: __init__.py  task_dns_check.py  task_gitlab.py  task_ssl_date_check.py
servergrimoiredjango/templates/servergrimoiredjango/: dashboard.html  domain_confirm_delete.html  domain_detail.html  domain_filter.html  domain_form.html
servergrimoiredjango/templatetags/: __init__.py  app_tags.py
servergrimoiredjango/tests/: __init__.py  settings.py  urls.py
servergrimoiredjango/tests/model/: __init__.py  test_domain.py
tests/model/: domain.py
