[tool.poetry]
name = "servergrimoiredjango"
version = "0.1.0"
description = "A sysadmin module for django"
authors = ["Fundor333 <fundor333@fundor333.com>"]
license = "Mit"

keywords = ["devops", "ssl", "sysadmin", "django"]

classifiers = [
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Networking :: Monitoring',
    'Intended Audience :: Developers',
    "Development Status :: 4 - Beta",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.0"
django-colorfield = "^0.3.2"
coverage = "^5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pylint-django = "^2.3.0"
autopep8 = "^1.5.4"
rope = "^0.18.0"
safety = "^1.9.0"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
